INT-12606: personal menu - move links to see more to stop overlapping with long lang strings

--- a/scss/_personalmenu.scss
+++ b/scss/_personalmenu.scss
@@ -404,8 +404,12 @@ body.snap-pm-open {
 // -------------------------
 //  Personal menu links to browse all course, see all messages etc.
 // -------------------------
-.snap-personal-menu-more {
+#snap-pm-courses .snap-personal-menu-more {
     position: absolute;
     top: 0;
     right: 0;
+}
+.snap-personal-menu-more {
+    display: block;
+    text-align: right;
 }
